--- a/School Site V3/src/Style.css
+++ b/School Site V3/src/Style.css
@@ -1,3 +1,4 @@
+
 a{
     margin: 0px 20px 20px 0px;
     text-decoration: none;
@@ -73,7 +74,7 @@ html, body{
 }
 
 .padding{
-   padding-bottom: 1rem; 
+   padding-bottom: .1rem; 
 }
 
 .myStyle{
@@ -82,7 +83,9 @@ html, body{
 }
 
 .HeroP{
-    margin-left: 3rem;
+    /* margin-left: 5%; */
+    color: #132149;
+    font-weight: bolder;
 
 }
 
@@ -91,22 +94,31 @@ html, body{
 }
 
 .myIcons{
-    padding-top: 3rem;
-    padding-bottom: .0rem;
+    padding-top: 2rem;
+    padding-bottom: .1rem;
 }
 
 .fa {
+    
     color: #eb9b2c;
     padding: .1rem;
+    
 }
 
 .fa i :hover{
     color: #132149;
 }
 .myLine{
-    border: 1px solid #132149;
+    /* border: 1px solid #132149; */
     color: #132149;
+    border-width: .1rem;
+    border-color: #132149;
     
+    
+}
+
+.myLine2{
+    border-width: .2rem;
 }
 
 .hero{
@@ -125,31 +137,11 @@ html, body{
     animation-name: fadeIn;
 }
 
-/* .flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect 
-  }
-*/
-  /* .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
+.header{
+    /* margin-left: 3rem; */
+    color: #eb9b2c;
+}
 
-  .flip-card-back {
-    background-color: dodgerblue;
-    color: white;
-    transform: rotateY(180deg);
-  } */ 
 
 
 /* footer styling  */
@@ -173,9 +165,13 @@ hr .light{
     border: transparent;
 }
 
+.carousel-control-next-icon :hover{
+    background-color: #132149;
+}
+
 
 /* Responsiveness for size scales */
-@media (max-width: 992px){
+@media (max-width: 1200px){
     .social a{
         font-size: 4em;
         padding: 2rem;
@@ -213,11 +209,15 @@ hr .light{
         font-size: 2.5rem;
         padding: 2rem;
     }
+    .navbar-toggle-icon{
+        width: .1rem;
+        height: .1rem;
+    }
 
 
 }
 
-@media (max-width: 576px){
+@media (max-width: 480px){
     .carousel-caption{
         top: 40%;
     }
@@ -248,6 +248,8 @@ hr .light{
         padding: 4px 8px;
     }
 }
+
+
 
 
 
